[KateMwModOnHdDialog] Only enable buttons when at least one file is checked

BUG: 412972